modify cosmos db app client

--- a/cosmosdb-app/cosmosdb-wepapp/index.html
+++ b/cosmosdb-app/cosmosdb-wepapp/index.html
@@ -81,7 +81,7 @@
           var err = authContext.getLoginError();
           if (err) {
               // TODO: Handle errors signing in and getting tokens
-              console.log(error);
+              console.log(err);
           }
         } else {
           // If logged in, get access token and make an API request
