modified realtime service index.html for cd

--- a/realtime/index.html
+++ b/realtime/index.html
@@ -5,7 +5,9 @@
     </head>
 </html>
 <body>
-    <p>Welcome to the Socket.io Test App!</p>
+    <h1>Welcome to the Socket.io Test App!</h1>
+    <p>This page will show telemetry for <b>mydevice</b></p>
+    
     <ul id="messages"></ul>
     <script>
         var socket = io();
